Fix spacing in info container

--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -79,3 +79,8 @@ button.cancel {
   font-size: large;
 }
 
+.info{
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
